--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,13 +1,13 @@
 [kigconfig]
 log = True
-APP_ID = https://my.telegram.org
-API_HASH = https://my.telegram.org
-TOKEN = https://t.me/BotFather
-OWNER_ID = 895373440
-OWNER_USERNAME = dank_as_fuck
+APP_ID = 6622320
+API_HASH = 79451581e01f3fb75da4eebe9eee16cd
+TOKEN = 1796551102:AAF9arqhgISfU9GlBfxR--XyObUvINeZdgc
+OWNER_ID = 1582537623
+OWNER_USERNAME = wonante_on
 SQLALCHEMY_DATABASE_URI = postgres db url
-MESSAGE_DUMP = -1001451724150
-GBAN_LOGS = -1001451724150
+MESSAGE_DUMP = -1001595001945
+GBAN_LOGS = -1001595001945
 SYS_ADMIN =
 LOAD =
 NO_LOAD = sed
